Don't allow form-feed (U+000C) as a WebVTT signature separator

Per the WebVTT parser algorithm [1], only space, tab or newline (after
normalization) are allowed to follow the "WEBVTT" signature.

[1] https://w3c.github.io/webvtt/#webvtt-parser-algorithm

BUG=651777

Review-Url: https://codereview.chromium.org/2382173002
Cr-Commit-Position: refs/heads/master@{#422093}

Former-commit-id: 84007ecf0f27d2074c70955d43cc1743ee39980a